<resources>
    <string name="app_name">RestApiCustomWork</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_login_signin">Login</string>
    <string name="new_user">If You are New User ?</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="user_signup">SignUp</string>
    <string name="button_signup">SignUp</string>
    <string name="user_email">Email</string>
    <string name="user_name">User Name</string>
    <string name="user_password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>