<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <EditText
        android:id="@+id/user_name"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/user_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:ems="10"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/user_signup"
        android:layout_width="306dp"
        android:layout_height="64dp"
        android:text="@string/user_signup"
        android:textAlignment="center"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@+id/user_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="132dp"
        android:layout_height="56dp"
        android:text="@string/button_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password"
        app:layout_constraintVertical_bias="0.735" />

</androidx.constraintlayout.widget.ConstraintLayout>